<resources>
    <string name="app_name">Capstone</string>
    <string name="goserv">Goserv</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="create">Daftar Akun Baru</string>
    <string name="daftar">Daftar</string>
    <string name="addimg">Masukan Foto</string>
    <string name="nama">Nama</string>
    <string name="konfirmasi">Konfirmasi Password</string>
    <string name="datar2">Daftar Akun</string>
    <string name="akun">Sudah Punya Akun</string>
    <string name="serv">-Serv</string>
    <string name="select_user">Pilih Teknisi</string>
    <string name="choice">Pilih Teknisi</string>
    <string name="kirim_pesan">Kirim Pesan...</string>
</resources>