<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.DaftarActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/goserv"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/daftar"
            android:textColor="@color/second_text"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"/>

        <FrameLayout
            android:id="@+id/layoutImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/bc_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>
            <TextView
                android:id="@+id/textAddImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/addimg"
                android:textColor="@color/second_text"
                android:textSize="@dimen/_10ssp"/>

        </FrameLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Nama"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bc_input"
            android:hint="@string/nama"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Email"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bc_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputPassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bc_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputKonfirmasiPassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bc_input"
            android:hint="@string/konfirmasi"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tombolDaftar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/datar2"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"/>

            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"/>


        </FrameLayout>


        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/akun"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:textColor="@color/primary"/>

    </LinearLayout>
</ScrollView>