<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MasukActivity"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="@dimen/_24sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/goserv"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login"
            android:textColor="@color/second_text"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Email"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/bc_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputPassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bc_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tombolMasuk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/masuk"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"/>

            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/barProgress"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>



        <TextView
            android:id="@+id/textAkunBaru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:textColor="@color/primary"/>



    </LinearLayout>

</ScrollView>